--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,22 @@
 {
-  "manifest_version": 3,
-  "name": "Skool Activity Scraper",
-  "version": "1.0",
-  "description": "Scrapes Skool posts for most active members.",
-  "permissions": ["activeTab", "scripting", "storage"],
-  "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-          "16": "icon.png",
-          "48": "icon.png",
-          "128": "icon.png"
-      }
-  },
-  "content_scripts": [
-      {
-          "matches": ["*://*.skool.com/*"],
-          "js": ["content.js"]
-      }
-  ]
-}
+    "manifest_version": 3,
+    "name": "Skool Activity Scraper",
+    "version": "1.0",
+    "description": "Scrapes Skool posts for most active members.",
+    "permissions": ["storage"],
+    "action": {
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "icon.png",
+            "48": "icon.png",
+            "128": "icon.png"
+        }
+    },
+    "content_scripts": [
+        {
+            "matches": ["*://*.skool.com/*"],
+            "js": ["content.js"]
+        }
+    ]
+  }
+  
